# pyavd

./: pyproject.toml
android_sdk_utils/: _android_sdk_utils.py
pyavd/: __init__.py  pyavd.py
tests/: test_android_sdk_utils.py  test_pyavd_logical_flow.py
